--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.MoviesActivity">
+        <activity android:name=".views.activities.MoviesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".views.activities.DetailsActivity">
+
+        </activity>
+       <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="f61375f6d805385167adaed63d0eb0ef1f66b7dd" />
     </application>
 
 </manifest>
