--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +24,12 @@
        <meta-data
             android:name="io.fabric.ApiKey"
             android:value="f61375f6d805385167adaed63d0eb0ef1f66b7dd" />
+
+        <meta-data android:name="DATABASE" android:value="favourites.db" />
+        <meta-data android:name="VERSION" android:value="2" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.execube.genesis.model" />
+
     </application>
 
 </manifest>
