--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.facebook.stetho:stetho-okhttp:1.1.1'
     compile 'com.github.satyan:sugar:1.5'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
@@ -54,4 +52,5 @@ dependencies {
         transitive = true;
     }
     compile 'com.android.support:palette-v7:23.3.0'
+    compile 'com.squareup:otto:1.3.8'
 }
