--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,13 @@ repositories {
 
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
 
     defaultConfig {
         applicationId "com.execube.genesis"
         minSdkVersion 17
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -37,13 +37,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.github.satyan:sugar:1.5'
-    compile 'com.android.support:cardview-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:customtabs:23.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile('com.mikepenz:materialize:0.8.8@aar') {
         transitive = true
@@ -51,6 +45,10 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
         transitive = true;
     }
-    compile 'com.android.support:palette-v7:23.3.0'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
 }
