--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
