--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.android.support:design:27.0.2'
     compile 'com.android.support:customtabs:27.0.2'
+
+    //RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile('com.mikepenz:materialize:0.8.8@aar') {
         transitive = true
