--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,14 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.8'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+
+    // Room
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile('com.mikepenz:materialize:0.8.8@aar') {
