--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,15 +16,14 @@ repositories {
 
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.execube.genesis"
         minSdkVersion 21
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 28
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -35,18 +34,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.android.support:design:27.0.2'
-    compile 'com.android.support:customtabs:27.0.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation  'com.android.support:appcompat-v7:28.0.0'
+    implementation  'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation  'com.android.support:recyclerview-v7:28.0.0'
+    implementation  'com.android.support:cardview-v7:28.0.0'
+    implementation  'com.android.support:design:28.0.0'
+    implementation  'com.android.support:customtabs:28.0.0'
 
     //RxJava
-    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation  'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation  'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.0.0"
@@ -57,13 +56,13 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile('com.mikepenz:materialize:0.8.8@aar') {
+    implementation  'com.squareup.picasso:picasso:2.5.2'
+    implementation ('com.mikepenz:materialize:0.8.8@aar') {
         transitive = true
     }
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
-        transitive = true;
+    implementation ('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
+        transitive = true
     }
-    compile 'com.android.support:palette-v7:27.0.2'
-    compile 'com.squareup:otto:1.3.8'
+    implementation  'com.android.support:palette-v7:28.0.0'
+    implementation  'com.squareup:otto:1.3.8'
 }
