--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,33 +36,34 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation  'com.android.support:appcompat-v7:28.0.0'
-    implementation  'com.squareup.okhttp3:okhttp:3.2.0'
-    implementation  'com.android.support:recyclerview-v7:28.0.0'
-    implementation  'com.android.support:cardview-v7:28.0.0'
-    implementation  'com.android.support:design:28.0.0'
-    implementation  'com.android.support:customtabs:28.0.0'
-
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.browser:browser:1.0.0'
     //RxJava
-    implementation  'io.reactivex.rxjava2:rxjava:2.1.8'
-    implementation  'io.reactivex.rxjava2:rxandroid:2.0.1'
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.0.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
     // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
-
-    implementation  'com.squareup.picasso:picasso:2.5.2'
-    implementation ('com.mikepenz:materialize:0.8.8@aar') {
+    implementation 'androidx.room:room-runtime:2.0.0-rc01'
+    annotationProcessor "androidx.room:room-compiler:2.0.0-rc01"
+    //Material theme
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation('com.mikepenz:materialize:0.8.8@aar') {
         transitive = true
     }
-    implementation ('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
         transitive = true
     }
-    implementation  'com.android.support:palette-v7:28.0.0'
-    implementation  'com.squareup:otto:1.3.8'
+    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit-converters:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit-adapters:2.4.0'
 }
