--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,69 +1,95 @@
 buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
+  repositories {
+    maven { url 'https://maven.fabric.io/public' }
+  }
 
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
+  dependencies {
+    classpath 'io.fabric.tools:gradle:1.+'
+  }
+
 }
+
+
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
+  maven { url 'https://maven.fabric.io/public' }
 }
 
 
 android {
-    compileSdkVersion 28
+  compileSdkVersion 28
 
-    defaultConfig {
-        applicationId "com.execube.genesis"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 2
-        versionName "2.0"
+  defaultConfig {
+    applicationId "com.execube.genesis"
+    minSdkVersion 21
+    targetSdkVersion 28
+    versionCode 2
+    versionName "2.0"
+  }
+  buildTypes {
+    debug{
+      buildConfigField 'String', "API_KEY", TMDBApiKey
+      resValue 'string', "api_key", TMDBApiKey
+
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    release {
+      buildConfigField 'String', "API_KEY", TMDBApiKey
+      resValue 'string', "api_key", TMDBApiKey
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
+  androidExtensions {
+    experimental = true
+  }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testImplementation 'junit:junit:4.12'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.browser:browser:1.0.0'
-    //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    // ViewModel and LiveData
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
-    // Room
-    implementation 'androidx.room:room-runtime:2.0.0-rc01'
-    annotationProcessor "androidx.room:room-compiler:2.0.0-rc01"
-    //Material theme
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation('com.mikepenz:materialize:0.8.8@aar') {
-        transitive = true
-    }
-    implementation('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
-        transitive = true
-    }
-    implementation 'androidx.palette:palette:1.0.0'
-    implementation 'com.squareup:otto:1.3.8'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:retrofit-converters:2.4.0'
-    implementation 'com.squareup.retrofit2:retrofit-adapters:2.4.0'
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+  testImplementation 'junit:junit:4.12'
+  implementation 'androidx.appcompat:appcompat:1.0.0'
+  implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+  implementation 'androidx.recyclerview:recyclerview:1.0.0'
+  implementation 'androidx.cardview:cardview:1.0.0'
+  implementation 'com.google.android.material:material:1.0.0'
+  implementation 'androidx.browser:browser:1.0.0'
+  //RxJava
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+  // ViewModel and LiveData
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+  annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+  // Room
+  implementation 'androidx.room:room-runtime:2.0.0-rc01'
+  annotationProcessor "androidx.room:room-compiler:2.0.0-rc01"
+  //Material theme
+  implementation 'com.google.android.material:material:1.0.0'
+  implementation('com.mikepenz:materialize:0.8.8@aar') {
+    transitive = true
+  }
+  implementation('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
+    transitive = true
+  }
+  implementation 'androidx.palette:palette:1.0.0'
+  implementation 'com.squareup:otto:1.3.8'
+  implementation 'com.squareup.picasso:picasso:2.5.2'
+  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+  implementation 'com.google.code.gson:gson:2.8.5'
+  implementation 'com.squareup.retrofit2:retrofit-converters:2.4.0'
+  implementation 'com.squareup.retrofit2:retrofit-adapters:2.4.0'
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+  implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
